# mcp-server-weibo

./: .dockerignore  .gitignore  DOCKER_HUB_DESCRIPTION.md  Dockerfile  Dockerfile-alpine  README.md  README_EN.md  docker-compose.yml  log_config.toml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
skills/: SKILL.md
src/: custom_formatter.py
src/mcp_server_weibo/: README.md  consts.py  server.py  weibo.py  weibo_cli.py
tests/: .env.example  test_server.py  test_weibo.py
